--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.84MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.46MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.65MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.74MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
-  - {name: 🇯🇵 日本-2.26MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.22MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.24MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.04MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.68MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇯🇵 日本-4.38MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.37MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.89MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-307.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
