--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.22MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.24MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.04MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.68MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.38MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.37MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.89MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-307.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.89MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.36MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-340.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.13MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.53MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.09MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.89MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.46MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
