--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.89MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.36MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-340.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.13MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.53MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.09MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.89MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.46MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.89MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.17MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-307.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.12MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.33MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.68MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1004.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
