--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.89MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.17MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-307.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 30d830d3-f301-33a1-bc0c-29acbca168ec, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.12MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.33MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.68MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1004.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-8.06MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.65MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.68MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.47MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.97MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.67MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.51MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-1004.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
